{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5b5ec2a1-5557-4eef-a06e-66be557ed226",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "7ba59e26-cf83-4693-b836-b31c897315f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "257f0e73-a3a9-46cc-8622-8c11c03a545f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e7cac10e-5291-4b9d-8d39-72a6f1c7f662",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryFire",
                    "type": "Button",
                    "id": "363ff96c-4554-4136-9541-0de16257223c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "08334264-b9d1-43f0-9100-b2d5f25e9045",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "d8025606-1fac-4da1-83de-af7628372853",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Switch1",
                    "type": "Button",
                    "id": "f97d9877-ebee-4ae4-adbd-b5f767f67978",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Switch2",
                    "type": "Button",
                    "id": "913ea4c2-2beb-4c3d-882f-02ec7ef8d5e0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFire",
                    "type": "Button",
                    "id": "0ec40830-27de-4ae9-a731-cc847d914b6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c1f0a87a-4cc0-4251-a9bb-7ceb6d5c3f95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "c79dd0bf-876d-454d-bcbf-1967e0b8853b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc69815d-5765-413a-ae2c-678c3dbb43e7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd5164bc-41db-42b0-9dbe-8a08efb5ac6a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dd1d361-9823-40b4-972b-3e0732840d89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "807df9e2-f787-42ed-b92f-d48058505245",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a79a238b-2ddf-4253-ae18-71bb26909de6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdafbd5a-ddf8-4743-aecc-9fcf2c12f879",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "086f96de-8f1a-4f01-88d9-7c807ade3820",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa1225e-0611-4c9e-add0-bbcfd3ebf69b",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06404b9b-af37-4831-8cc9-ef71a26794d9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec0f4771-c5e8-42fa-bbc7-6536f372bcee",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfd343c8-fb90-4b50-8491-59c1d6abeb1f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}